--- a/.github/workflows/go_build_run.yml
+++ b/.github/workflows/go_build_run.yml
@@ -27,3 +27,6 @@ jobs:
     - name: Run the containers
       run: docker compose up -d
 
+    - name: ping test
+      run: curl --fail http://localhost:8080 || echo "Ping failed" && exit 1
+
